<resources>
    <string name="app_name">Listen To A Story</string>
    <string name="title_of_book">Aesop\'s Fables, Vol 02</string>
    <string name="this_is_a_librivox">This is a LibriVox</string>
    <string name="library">Library</string>
    <string name="more_on_librivox">Explore LibriVox</string>
    <string name="search_aesop_on_the_web">Search Aesop on the web</string>
    <string name="more_on_aesop">More on Aesop on Wikipedia</string>
    <string name="now_playing">Now Playing</string>
    <string name="fable_numeration">(Fables 26 &#8211; 50)</string>
    <string name="read_by">read by</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="editor">A LibriVox Recording</string>
</resources>
